<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/titulo"
            android:textColor="@color/teal_200"
            android:layout_marginLeft="45dp"
            android:textSize="30sp" />

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/logo"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            app:srcCompat="@drawable/panedes" />

        <Button
            android:id="@+id/contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/contact" />

        <Button
            android:id="@+id/empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/empresa" />

        <Button
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/services" />

        <Button
            android:id="@+id/horario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/horario" />

       <!--  <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/web"
            android:background="@color/black"
            />-->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>