<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:text="@string/titulo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="231dp"
            app:srcCompat="@drawable/panedes2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="25dp"
            android:textSize="15sp"
            android:textColor="@color/red"
            android:text="@string/nuestraHistoria" />

        <TextView
            android:id="@+id/resum"
            android:layout_width="match_parent"
            android:layout_height="456dp"
            android:text="@string/historia"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>